documentation/annotation-based-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: zorp
    zorp.ingress.kubernetes.io/conf: |
      [{"target_ports": [8080], "policy_type": "HttpProxy"}, {"max_keepalive_requests": 567, "permit_proxy_requests": true, "target_ports": [81, 82], "timeout": 100, "parent_proxy": "foo", "policy_type": "HttpProxy", "strict_header_checking_action": "abort", "permitted_requests": ["put", "post"]}, {"target_ports": [83], "policy_type": "HttpWebdavProxy"}, {"matcher_whitelist": ["foo", "bar"], "target_ports": [84], "policy_type": "HttpURIFilterProxy"}, {"target_ports": [85], "encryption": true, "e [...]
spec:
  rules:
    - http:
